kube/jumps-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: default
  labels:
    service: jumps
  name: jumps
spec:
  replicas: 2
  template:
    metadata:
      labels:
        service: jumps
    spec:
      containers:
      - name: jumps
        image: zquestz/s-search
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
      restartPolicy: Always
