kube/jumps-ingress-tls.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jumps-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - jumps.io
    - www.jumps.io
    secretName: jumps-tls
  backend:
    serviceName: jumps
    servicePort: 81
  rules:
  - host: jumps.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jumps
          servicePort: 81
  - host: www.jumps.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jumps
          servicePort: 81
